RESOLVED FIXED187950
[Web Animations] Crash accessing CSSAnimation::bindingsCurrentTime when effect has been set to null
https://bugs.webkit.org/show_bug.cgi?id=187950
Summary [Web Animations] Crash accessing CSSAnimation::bindingsCurrentTime when effec...
Antoine Quint
Reported 2018-07-24 02:40:16 PDT
[Web Animations] Crash accessing CSSAnimation::bindingsCurrentTime when effect has been set to null
Attachments
Patch (4.94 KB, patch)
2018-07-24 02:43 PDT, Antoine Quint
dino: review+
ews-watchlist: commit-queue-
Archive of layout-test-results from ews200 for win-future (12.90 MB, application/zip)
2018-07-24 06:12 PDT, EWS Watchlist
no flags
Antoine Quint
Comment 1 2018-07-24 02:42:03 PDT
Antoine Quint
Comment 2 2018-07-24 02:43:19 PDT
EWS Watchlist
Comment 3 2018-07-24 06:12:47 PDT
Comment on attachment 345649 [details] Patch Attachment 345649 [details] did not pass win-ews (win): Output: https://webkit-queues.webkit.org/results/8637631 New failing tests: webanimations/accessing-current-time-after-clearing-css-animation-effect.html
EWS Watchlist
Comment 4 2018-07-24 06:12:59 PDT
Created attachment 345667 [details] Archive of layout-test-results from ews200 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews200 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
Antoine Quint
Comment 5 2018-07-24 12:28:58 PDT
Note You need to log in before you can comment on or make changes to this bug.